--- a/index.html
+++ b/index.html
@@ -165,6 +165,65 @@
             </div>
           </div>
         </div>
+
+        <div class="about__container grid">
+          <div class="about__item">
+            <img src="assets/img/restaurant-1.jpg" alt="" class="about__img">
+
+            <div class="about__top">
+              <h3 class="about__top-title">Restaurante</h3>
+            </div>
+
+            <div class="about__hover">
+              <div class="about__hover-data">
+                <h3 class="about__hover-title">Restaurante</h3>
+                <p class="about__description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+
+                <a href="#reservation" class="button about__btn">
+                  Reserve uma mesa
+                </a>
+              </div>
+            </div>
+          </div>
+
+          <div class="about__item">
+            <img src="assets/img/restaurant-2.jpg" alt="" class="about__img">
+
+            <div class="about__top">
+              <h3 class="about__top-title">Bebidas & Drink's</h3>
+            </div>
+
+            <div class="about__hover">
+              <div class="about__hover-data">
+                <h3 class="about__hover-title">Bebidas & Drink's</h3>
+                <p class="about__description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+
+                <a href="#reservation" class="button about__btn">
+                  Reserve uma mesa
+                </a>
+              </div>
+            </div>
+          </div>
+
+          <div class="about__item">
+            <img src="assets/img/restaurant-3.jpg" alt="" class="about__img">
+
+            <div class="about__top">
+              <h3 class="about__top-title">Jantar Privado</h3>
+            </div>
+
+            <div class="about__hover">
+              <div class="about__hover-data">
+                <h3 class="about__hover-title">Jantar Privado</h3>
+                <p class="about__description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+
+                <a href="#reservation" class="button about__btn">
+                  Reserve uma mesa
+                </a>
+              </div>
+            </div>
+          </div>
+        </div>
       </section>
 
       <!--==================== MENU ====================-->
