--- a/index.html
+++ b/index.html
@@ -227,7 +227,190 @@
       </section>
 
       <!--==================== MENU ====================-->
-      <section class="menu" id="menu"></section>
+      <section class="menu section" id="menu">
+        <h2 class="section__title title-center">Cardápio Fast Food</h2>
+
+        <div class="menu__container container grid">
+          <div class="menu__group grid">
+            <div class="menu__item">
+              <div class="menu__img-wrapper">
+                <img src="assets/img/food-img-1.png" alt="" class="menu__img">
+              </div>
+
+              <div class="menu__data">
+                <h3 class="menu__title">BR Bacon Burguer</h3>
+                <span class="menu__price">R$24,00</span>
+                <ul class="menu__rating">
+                  <li><i class="ri-star-fill"></i></li>
+                  <li><i class="ri-star-fill"></i></li>
+                  <li><i class="ri-star-fill"></i></li>
+                  <li><i class="ri-star-fill"></i></li>
+                  <li><i class="ri-star-fill"></i></li>
+                </ul>
+                <a href="#" class="menu__btn">
+                  <i class="ri-shopping-bag-line"></i>
+                </a>
+              </div>
+            </div>
+
+            <div class="menu__item">
+              <div class="menu__img-wrapper">
+                <img src="assets/img/food-img-2.png" alt="" class="menu__img">
+              </div>
+
+              <div class="menu__data">
+                <h3 class="menu__title">Frangão BR</h3>
+                <span class="menu__price">R$28,00</span>
+                <ul class="menu__rating">
+                  <li><i class="ri-star-fill"></i></li>
+                  <li><i class="ri-star-fill"></i></li>
+                  <li><i class="ri-star-fill"></i></li>
+                  <li><i class="ri-star-fill"></i></li>
+                  <li><i class="ri-star-fill"></i></li>
+                </ul>
+                <a href="#" class="menu__btn">
+                  <i class="ri-shopping-bag-line"></i>
+                </a>
+              </div>
+            </div>
+
+            <div class="menu__item">
+              <div class="menu__img-wrapper">
+                <img src="assets/img/food-img-3.png" alt="" class="menu__img">
+              </div>
+
+              <div class="menu__data">
+                <h3 class="menu__title">BR Apimentado</h3>
+                <span class="menu__price">R$22,00</span>
+                <ul class="menu__rating">
+                  <li><i class="ri-star-fill"></i></li>
+                  <li><i class="ri-star-fill"></i></li>
+                  <li><i class="ri-star-fill"></i></li>
+                  <li><i class="ri-star-fill"></i></li>
+                  <li><i class="ri-star-fill"></i></li>
+                </ul>
+                <a href="#" class="menu__btn">
+                  <i class="ri-shopping-bag-line"></i>
+                </a>
+              </div>
+            </div>
+          </div>
+
+          <div class="menu__group grid">
+            <div class="menu__item">
+              <div class="menu__img-wrapper">
+                <img src="assets/img/food-img-4.png" alt="" class="menu__img">
+              </div>
+
+              <div class="menu__data">
+                <h3 class="menu__title">Pizza Margherita</h3>
+                <span class="menu__price">R$23,00</span>
+                <ul class="menu__rating">
+                  <li><i class="ri-star-fill"></i></li>
+                  <li><i class="ri-star-fill"></i></li>
+                  <li><i class="ri-star-fill"></i></li>
+                  <li><i class="ri-star-fill"></i></li>
+                  <li><i class="ri-star-fill"></i></li>
+                </ul>
+                <a href="#" class="menu__btn">
+                  <i class="ri-shopping-bag-line"></i>
+                </a>
+              </div>
+            </div>
+
+            <div class="opening">
+              <h3 class="opening__title">Horário de Funcionamento</h3>
+
+              <dl class="opening__list">
+                <dt>Qua</dt>
+                <dd>17:00h ás 00:00h</dd>
+                <dt>Qui</dt>
+                <dd>17:00h ás 00:00h</dd>
+                <dt>Sex</dt>
+                <dd>17:00h ás 00:00h</dd>
+                <dt>Sáb</dt>
+                <dd>17:00h ás 00:00h</dd>
+                <dt>Dom</dt>
+                <dd>16:00h ás 00:00h</dd>
+                <dt class="close">Seg-Ter</dt>
+                <dd class="close">Fechado</dd>
+              </dl>
+
+              <div class="opening__data">
+                <a href="callto: +552112345678"><h3>+55 (21) 1234-5678</h3></a>
+                <h4 class="opening__description">
+                  Avenida BR, 2208 - Brasil 
+                </h4>
+              </div>
+            </div>
+          </div>
+
+          <div class="menu__group grid">
+            <div class="menu__item">
+              <div class="menu__img-wrapper">
+                <img src="assets/img/food-img-5.png" alt="" class="menu__img">
+              </div>
+
+              <div class="menu__data">
+                <h3 class="menu__title">BR Salada</h3>
+                <span class="menu__price">R$18,00</span>
+                <ul class="menu__rating">
+                  <li><i class="ri-star-fill"></i></li>
+                  <li><i class="ri-star-fill"></i></li>
+                  <li><i class="ri-star-fill"></i></li>
+                  <li><i class="ri-star-fill"></i></li>
+                  <li><i class="ri-star-fill"></i></li>
+                </ul>
+                <a href="#" class="menu__btn">
+                  <i class="ri-shopping-bag-line"></i>
+                </a>
+              </div>
+            </div>
+
+            <div class="menu__item">
+              <div class="menu__img-wrapper">
+                <img src="assets/img/food-img-6.png" alt="" class="menu__img">
+              </div>
+
+              <div class="menu__data">
+                <h3 class="menu__title">Pizza de Churrasco</h3>
+                <span class="menu__price">R$35,00</span>
+                <ul class="menu__rating">
+                  <li><i class="ri-star-fill"></i></li>
+                  <li><i class="ri-star-fill"></i></li>
+                  <li><i class="ri-star-fill"></i></li>
+                  <li><i class="ri-star-fill"></i></li>
+                  <li><i class="ri-star-fill"></i></li>
+                </ul>
+                <a href="#" class="menu__btn">
+                  <i class="ri-shopping-bag-line"></i>
+                </a>
+              </div>
+            </div>
+
+            <div class="menu__item">
+              <div class="menu__img-wrapper">
+                <img src="assets/img/food-img-7.png" alt="" class="menu__img">
+              </div>
+
+              <div class="menu__data">
+                <h3 class="menu__title">Pizza Pepperoni</h3>
+                <span class="menu__price">R$25,00</span>
+                <ul class="menu__rating">
+                  <li><i class="ri-star-fill"></i></li>
+                  <li><i class="ri-star-fill"></i></li>
+                  <li><i class="ri-star-fill"></i></li>
+                  <li><i class="ri-star-fill"></i></li>
+                  <li><i class="ri-star-fill"></i></li>
+                </ul>
+                <a href="#" class="menu__btn">
+                  <i class="ri-shopping-bag-line"></i>
+                </a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
 
       <!--==================== SERVICES ====================-->
       <section class="services" id="services"></section>
