--- a/index.html
+++ b/index.html
@@ -413,10 +413,90 @@
       </section>
 
       <!--==================== SERVICES ====================-->
-      <section class="services" id="services"></section>
+      <section class="services container section" id="services">
+        <div class="section__container grid">
+          <div class="section__group">
+            <div class="span section__subtitle">Melhores Soluções</div>
+            <h2 class="section__title">Nós oferecemos os melhores serviços.</h2>
+          </div>
+
+          <div class="section__group">
+            <p class="section__description">Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+              Officia perspiciatis similique necessitatibus animi quasi porro maiores vero fuga, 
+              fugiat eveniet temporibus sunt ratione assumenda commodi totam in quia repudiandae 
+              architecto!
+            </p>
+          </div>
+        </div>
+
+        <div class="services__container grid">
+          <div class="services__item">
+            <div class="services__img-wrapper">
+              <img 
+                src="assets/img/service-1.svg" 
+                alt="" 
+                class="services__img"
+              />
+            </div>
+
+            <h3 class="services__title">Café da Tarde</h3>
+            <p class="services__description">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+            </p>
+          </div>
+
+          <div class="services__item">
+            <div class="services__img-wrapper">
+              <img 
+                src="assets/img/services-2.svg" 
+                alt="" 
+                class="services__img" 
+              />
+            </div>
+
+            <h3 class="services__title">Retirada e Delivery</h3>
+            <p class="services__description">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+            </p>
+          </div>
+
+          <div class="services__item">
+            <div class="services__img-wrapper">
+              <img 
+                src="assets/img/services-3.svg" 
+                alt="" 
+                class="services__img" 
+              />
+            </div>
+
+            <h3 class="services__title">Bebidas e Coquitéis</h3>
+            <p class="services__description">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+            </p>
+          </div>
+
+          <div class="services__item">
+            <div class="services__img-wrapper">
+              <img 
+                src="assets/img/services-4.svg" 
+                alt="" 
+                class="services__img" 
+              />
+            </div>
+
+            <h3 class="services__title">Jantar ao Ar Livre</h3>
+            <p class="services__description">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+            </p>
+          </div>
+        </div>
+      </section>
 
       <!--==================== DEALS ====================-->
-      <section class="deals"></section>
+      <section class="deals section container">
+        <span class="section__subtitle"></span>
+        <h2 class="section__title"></h2>
+      </section>
 
       <!--==================== MENU ====================-->
       <section class="menu"></section>
